# DockerVulnManager

./: .gitignore  .server.pid  AGENT_EVALUATORS.md  CHANGELOG.md  DASHBOARD_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  QWEN.md  README.md  STATUS.md  VULN_REMEDIATION.md  docker-compose.yml  pyproject.toml  reload.sh  requirements.txt  start.sh  stop.sh
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/charts/: RiskGauge.tsx  SeverityDonut.tsx  TopPackages.tsx  TrendLine.tsx
frontend/src/components/common/: EmptyState.tsx  ScanButton.tsx  ScanDialog.tsx  StatusBadge.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  skeleton.tsx  tabs.tsx
frontend/src/components/vulns/: VulnDetailDialog.tsx  VulnRow.tsx
frontend/src/hooks/: useQueries.ts
frontend/src/lib/: security.ts  utils.ts
frontend/src/pages/: Hardening.tsx  History.tsx  ImageDetail.tsx  Images.tsx  Overview.tsx  Settings.tsx  Vulnerabilities.tsx
frontend/src/types/: index.ts
hooks/: post-commit  pre-commit
src/: __init__.py  exceptions.py
src/api/: main.py  schemas.py
src/api/routers/: dashboard.py  hardening.py  images.py  scans.py  vulnerabilities.py
src/cli/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  analysis.py  container_auditor.py  docker_manager.py  dockerfile_analyzer.py  report_generator.py  scanner.py  trivy_scanner.py
src/database/: __init__.py  manager.py
src/models/: __init__.py  vulnerability.py
src/utils/: logger.py
tests/: test_all_phases.py  test_api.py  test_normal_code.py  test_phase1.py
